# saveme-config

./: BLOCKCHAIN_INTEGRITY.md  PERFORMANCE.md  README.md  farm.config.ts  package.json  tsconfig.node.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/apps/: mod.rs  vscode.rs  windows_terminal.rs  zed.rs
src-tauri/src/installer/: mod.rs
src-tauri/src/storage/: blob_chain.rs  blobs.rs  entry.rs  integration_tests.rs  manifest.rs  mod.rs  performance.rs  tests.rs
src/components/ui/: checkbox.tsx
src/store/: _app.ts  _backup.ts  index.ts
src/tabs/: _create.tsx  _restore.tsx  index.tsx
src/tabs/components/: app-form.tsx
src/types/: _app.ts  _backup.ts  index.ts
