[package]
name = "saveme_config"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "saveme_config_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
sha2 = "0.10"
walkdir = "2.3"
zstd = "0.11"
directories = "5.0"
anyhow = "1.0"
hex = "0.4.3"
chrono = "0.4.41"
tauri-plugin-log = "2"
base64 = "0.22.1"
dirs = "6.0.0"
tar = "0.4.44"
once_cell = "1.19.0"

[dev-dependencies]
tempfile = "3.9"
